--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,71 @@
-contourpy==1.3.0
+absl-py==2.3.0
+asttokens==3.0.0
+cffi==1.17.1
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.2
+cryptography==45.0.4
 cycler==0.12.1
-fonttools==4.57.0
-importlib_resources==6.5.2
-joblib==1.5.0
-kiwisolver==1.4.7
-matplotlib==3.9.4
-narwhals==1.38.2
-numpy==2.0.2
+debugpy==1.8.15
+decorator==5.2.1
+executing==2.2.0
+filelock==3.18.0
+fonttools==4.58.4
+fsspec==2025.5.1
+grpcio==1.73.0
+h5py==3.14.0
+ipykernel==6.29.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+keras==3.10.0
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml_dtypes==0.5.1
+mpmath==1.3.0
+msgpack==1.1.1
+namex==0.1.0
+nest-asyncio==1.6.0
+networkx==3.5
+numpy==2.3.1
+optree==0.16.0
 packaging==25.0
-pandas==2.2.3
+pandas==2.3.0
+parso==0.8.4
 pillow==11.2.1
-plotly==6.0.1
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+protobuf==5.29.5
+psutil==7.0.0
+pure_eval==0.2.3
+pycparser==2.22
+Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
-scikit-learn==1.6.1
-scipy==1.13.1
+pywin32==311
+pyzmq==27.0.0
+rich==14.0.0
+scikit-learn==1.7.0
+scipy==1.15.3
 seaborn==0.13.2
+setuptools==80.9.0
 six==1.17.0
+stack-data==0.6.3
+sympy==1.14.0
+tf==1.0.3
 threadpoolctl==3.6.0
+torch==2.7.1
+tornado==6.5.1
+traitlets==5.14.3
+typing_extensions==4.14.0
 tzdata==2025.2
-zipp==3.21.0
+wcwidth==0.2.13
