--- a/Project/configs/masked_lstm_config.ini
+++ b/Project/configs/masked_lstm_config.ini
@@ -16,6 +16,7 @@ epochs        = 200
 train_frac    = 0.8
 hidden_size   = 64
 weight_decay  = 1e-5
+num_layers    = 2
 
 [file_params]
 save_fig      = True 
